<resources>
    <string name="app_name">Prediction Of Divorce.</string>
    <string name="choiceLevel_0">Never</string>
    <string name="choiceLevel_1">Hardly</string>
    <string name="choiceLevel_2">Rarely</string>
    <string name="choiceLevel_3">Often</string>
    <string name="choiceLevel_4">Always</string>
    <string name="item_1">\u0020\u0020\u0020\u0020If one of us apologizes when our discussion deteriorates, the discussion ends.</string>
    <string name="item_2">\u0020\u0020\u0020\u0020I know we can ignore our differences, even if things get hard sometimes.</string>
    <string name="item_3">\u0020\u0020\u0020\u0020We can discuss our relationship from the beginning and correct our mistakes.</string>
    <string name="item_4">\u0020\u0020\u0020\u0020The time I spent with my husband/wife is special for us.</string>
    <string name="item_5">\u0020\u0020\u0020\u0020We don\'t have time at home as partners.</string>
    <string name="item_6">\u0020\u0020\u0020\u0020We are like two strangers who share the same environment at home rather than family.</string>
    <string name="item_7">\u0020\u0020\u0020\u0020I enjoy my holidays with my husband/wife.</string>
    <string name="item_8">\u0020\u0020\u0020\u0020I enjoy traveling with my husband/wife.</string>
    <string name="item_9">\u0020\u0020\u0020\u0020I think that one day in the future when I look back, I see that my spouse and I have been in harmony with each other.</string>
    <string name="item_10">\u0020\u0020\u0020\u0020My spouse and I have similar values in terms of personal freedom</string>
    <string name="item_11">\u0020\u0020\u0020\u0020My spouse and I have a similar sense of entertainment.</string>
    <string name="item_12">\u0020\u0020\u0020\u0020Our dreams with my spouse are similar and harmonious.</string>
    <string name="item_13">\u0020\u0020\u0020\u0020We\'re compatible with my spouse about what love should be.</string>
    <string name="item_14">\u0020\u0020\u0020\u0020We share the same views about being happy in our life with my spouse.</string>
    <string name="item_15">\u0020\u0020\u0020\u0020My spouse and I have similar ideas about how marriage should be.</string>
    <string name="item_16">\u0020\u0020\u0020\u0020My spouse and I have similar ideas about how roles should be in marriage.</string>
    <string name="item_17">\u0020\u0020\u0020\u0020My spouse and I trust each other. </string>
    <string name="item_18">\u0020\u0020\u0020\u0020I know exactly what my husband/wife likes.</string>
    <string name="item_19">\u0020\u0020\u0020\u0020I know how my spouse wants to be taken care of when she/he is sick.</string>
    <string name="item_20">\u0020\u0020\u0020\u0020I know my spouse\'s favorite food.</string>
    <string name="item_21">\u0020\u0020\u0020\u0020I can tell you what kind of stress my spouse is facing in her/his life.</string>
    <string name="item_22">\u0020\u0020\u0020\u0020I have knowledge of my spouse\'s inner world.</string>
    <string name="item_23">\u0020\u0020\u0020\u0020I know my spouse\'s basic anxieties.</string>
    <string name="item_24">\u0020\u0020\u0020\u0020I know what my spouse\'s current sources of stress are.</string>
    <string name="item_25">\u0020\u0020\u0020\u0020I know my spouse\'s hopes and wishes.</string>
    <string name="item_26">\u0020\u0020\u0020\u0020I know my spouse very well.</string>
    <string name="item_27">\u0020\u0020\u0020\u0020I know my spouse\'s friends and their social relationships.</string>
    <string name="item_28">\u0020\u0020\u0020\u0020I feel aggressive when I argue with my spouse.</string>
    <string name="item_29">\u0020\u0020\u0020\u0020When discussing with my spouse, I usually use expressions such as \‘you always\’ or \‘you never\’.</string>
    <string name="item_30">\u0020\u0020\u0020\u0020I can use negative statements about my spouse\'s personality during our discussions.</string>
    <string name="item_31">\u0020\u0020\u0020\u0020I can use offensive expressions during our discussions.</string>
    <string name="item_32">\u0020\u0020\u0020\u0020I can insult my spouse during our discussions.</string>
    <string name="item_33">\u0020\u0020\u0020\u0020I can be humiliating when we discuss.</string>
    <string name="item_34">\u0020\u0020\u0020\u0020My discussion with my spouse is not calm.</string>
    <string name="item_35">\u0020\u0020\u0020\u0020I hate my spouse\'s way of opening a subject of discussion.</string>
    <string name="item_36">\u0020\u0020\u0020\u0020When I talk to my spouse about something, my calm suddenly breaks.</string>
    <string name="item_37">\u0020\u0020\u0020\u0020When I argue with my spouse, ı only go out and I don\'t say a word.</string>
    <string name="item_38">\u0020\u0020\u0020\u0020I mostly stay silent to calm the situation a little bit.</string>
    <string name="item_39">\u0020\u0020\u0020\u0020Sometimes I think it\'s good for me to leave home for a while.</string>
    <string name="item_40">\u0020\u0020\u0020\u0020I\'d rather stay silent than discuss it with my spouse.</string>
    <string name="item_41">\u0020\u0020\u0020\u0020When I discuss with my spouse, I stay silent because I am afraid of not being able to control my anger.</string>
    <string name="item_42">\u0020\u0020\u0020\u0020I feel right in our discussions.</string>
    <string name="item_43">\u0020\u0020\u0020\u0020I have nothing to do with what I\'ve been accused of.</string>
    <string name="item_44">\u0020\u0020\u0020\u0020I\'m not actually the one who\'s guilty about what I\'m accused of.</string>
    <string name="item_45">\u0020\u0020\u0020\u0020I\'m not the one who\'s wrong about problems at home.</string>
    <string name="item_46">\u0020\u0020\u0020\u0020I\'m not afraid to tell my spouse about her/his incompetence.</string>
    <string name="title_result">Your Result is...</string>
    <string name="predict_yes_result">You will be divorce.</string>
    <string name="predict_no_result">You will not be divorce.</string>
    <string name="home_button">Back to HOME MENU</string>
    <string name="song_paragraph">\u0020\u0020\u0020\u0020Looking for that perfect song to play for your next romantic evening? Maybe you have a special date coming up, or an anniversary, or want to choose just the right music for Valentine\'s Day? Here is a list of some of the best love songs to help you create a great playlist for your special date.</string>
    <string name="song_1" translatable="false">"Yellow" - Coldplay</string>
    <string name="song_2" translatable="false">"Lover" - Taylor Swift</string>
    <string name="song_3" translatable="false">"No One" - Alicia Keys</string>
    <string name="song_4" translatable="false">"Ocean" - Lady Antebellum</string>
    <string name="song_5" translatable="false">"Wife You Up" - Russ</string>
    <string name="song_6" translatable="false">"The Bones" - Maren Morris</string>
    <string name="song_7" translatable="false">"Love Song" - Lana Del Rey</string>
    <string name="song_8" translatable="false">"You and I Both" - Jason Mraz</string>
    <string name="song_9" translatable="false">"When I Look At You" - Miley Cyrus</string>
    <string name="song_10" translatable="false">"She Will Be Loved" - Maroon 5</string>
    <string name="song_11" translatable="false">"Kiss Me" - Ed Sheeran</string>
    <string name="song_12" translatable="false">"All of Me" - John Legend</string>
    <string name="song_13" translatable="false">"At Last" - Etta James</string>
    <string name="song_14" translatable="false">"Just the Way You Are" - Bruno Mars</string>
    <string name="song_15" translatable="false">"Perfect" - Ed Sheeran ft. Beyoncé</string>
    <string name="song_16" translatable="false">"Halo" - Beyoncé</string>
    <string name="home_tenthingcheating">10 Things to Do Immediately When You Find Out Your Partner Is Cheating</string>
    <string name="home_eightstep">8 Steps That Can Save Your Marriage from Divorce</string>
    <string name="tenthing_item1">1. Stay calm and gather information</string>
    <string name="tenthing_item2">2. Remove yourself from the situation</string>
    <string name="tenthing_item3">3. Find good company</string>
    <string name="tenthing_item4">4. Let those tears fall freely</string>
    <string name="tenthing_item5">5. Get some exercise</string>
    <string name="tenthing_item6">6. Make an appointment with your doctor</string>
    <string name="tenthing_item7">7. Don\'t use this time to blame yourself</string>
    <string name="tenthing_item8">8. Don\'t let this shake how you feel about yourself</string>
    <string name="tenthing_item9">9. Own your mistakes</string>
    <string name="tenthing_item10">10. Ask if your needs are being met</string>
    <string name="tenthing_des_item1">No matter how upset you are at first hearing the news, it\'s important that you collect as much information about what happened between your partner and this other person. </string>
    <string name="tenthing_des_item2">It\'s not healthy for you to sit around in this situation, and could prevent you from processing everything in a healthy way.</string>
    <string name="tenthing_des_item6">If your partner\'s been sexual with another individual, you can\'t be confident that he or she used protection, and you certainly don\'t know what kind of diseases or infections the person they were sexually active with may possess,\" Michael warned.</string>
    <string name="tenthing_des_item10">Before you can say yes to continuing to pursue the relationship, you need to think things over. \"Give yourself space to not forgive, and if you get to a place when you feel like you can forgive, that\'s fine,\" Michael said. \"But, if not, that\'s really OK, too. There\'s no rule that says you have to come to a place of forgiveness.\" In other words, don\'t stay in the relationship if you find yourself in frequent pain.</string>
    <string name="eightstep_item1">Step One: Accept Your Partner\'s Feelings</string>
    <string name="eightstep_item2">Step Two: Validate Your Partner\'s Feelings</string>
    <string name="eightstep_item3">Step Three: Shut Down Your Reactive Brain</string>
    <string name="eightstep_item4">Step Four: Retreat</string>
    <string name="eightstep_item6">Step Six: Reestablish Contact</string>
    <string name="eightstep_item7">Step Seven: Make New Ground Rules</string>
    <string name="eightstep_item8">Step Eight: Observe What Happens</string>
    <string name="eightstep_des_item1">You are both entitled to your own feelings, and it\'s crucial to accept his or her position without trying to change it.</string>
    <string name="eightstep_des_item3">Your goal is to be the mature, kind, and loving person your partner fell in love with, not the anxious, angry person in survival mode.</string>
    <string name="eightstep_des_item4">You must be calm. You must give your partner space. And you must act in a way that will allow him or her to miss you (translation: no yelling, no begging, no drama).</string>
    <string name="eightstep_des_item5">You may think this divorce is largely your partner\'s fault and have a list of things you\'d like him or her to change—but the only thing you can control is yourself. In the end, you\'ll both need to change in order to be happy, so it\'s time for you to get to work on your end of the deal. So go back to yoga class, see a therapist on your own, visit old friends, or learn a new hobby.</string>
    <string name="eightstep_des_item6">Once you do meet again, focus on positive, happy interactions instead of getting to work on the relationship right away. Over time, once some of the pressure is removed and you\'re able to laugh and smile together again, you can assess whether you\'re both still interested in working things out.</string>
    <string name="eightstep_des_item8">If you want a common theme of divorce, it\'s the inability to solve the problem [in a way] that both people feel satisfied with,says Sussman.</string>
</resources>